# ubisoft-laforge-multirex

./: README.md  multirex_conda.sh  pyproject.toml  requirements.txt
assets/: download_config.json  id_mesh_weights_metadata_flame.pickle  video_bbox_mapping.pickle
assets/FLAME/: flame.patch  lbs.patch
assets/conversion_matrices/: 002421669_029210_FLAME_to_multiface_weights_sparse_v1.npz  002643814_030627_FLAME_to_multiface_weights_sparse_v1.npz  002645310_013263_FLAME_to_multiface_weights_sparse_v1.npz  002914589_068768_FLAME_to_multiface_weights_sparse_v1.npz  5372021_043046_FLAME_to_multiface_weights_sparse_v1.npz  6795937_031632_FLAME_to_multiface_weights_sparse_v1.npz  7889059_029858_FLAME_to_multiface_weights_sparse_v1.npz  8870559_044169_FLAME_to_multiface_weights_sparse_v1.npz
assets/regions/: cheek_region.npy  eyes_forehead_region.npy  mouth_cheek_region.npy  mouth_region.npy  nose_region.npy
src/multirex/: multirex_evaluation.py
src/multirex/scripts/: download_videos_and_tracked_meshes.py  get_gt_npy_sequences.py  utils.py
